object/output.txt
object$ g++ complex03.cpp 
complex03.cpp:8:35: error: default argument missing for parameter 2 of ‘complexCls::complexCls(double, double)’
    8 |   complexCls(double r = 0, double i){
      |                            ~~~~~~~^
complex03.cpp:8:21: note: ...following parameter 1 which has a default argument
    8 |   complexCls(double r = 0, double i){
      |         
